# panelizer-cli

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: python.yml
panelizer/: app.py
panelizer/cli/: __init__.py  core.py
panelizer/interface/: __init__.py  core.py
tests/: test_interface.py  test_panelizer.py
